<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clAnimalDetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailFragment">

    <ImageView
        android:id="@+id/ivAnimalDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imagem_do_animal"
        android:minHeight="@dimen/default_200dp"
        android:scaleType="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glFirst"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/dimen_24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glThird"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="96dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glSecond"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/dimen_24dp" />

    <TextView
        android:id="@+id/textView"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_name"
        app:layout_constraintBottom_toBottomOf="@+id/tvAnimalNameDetail"
        app:layout_constraintStart_toStartOf="@+id/glFirst"
        app:layout_constraintTop_toTopOf="@+id/tvAnimalNameDetail" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_location"
        app:layout_constraintBottom_toBottomOf="@+id/tvAnimalLocationDetail"
        app:layout_constraintStart_toStartOf="@+id/glFirst"
        app:layout_constraintTop_toTopOf="@+id/tvAnimalLocationDetail" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_lifespan"
        app:layout_constraintBottom_toBottomOf="@+id/tvAnimalLifeSpanDetail"
        app:layout_constraintStart_toStartOf="@+id/glFirst"
        app:layout_constraintTop_toTopOf="@+id/tvAnimalLifeSpanDetail" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_diet"
        app:layout_constraintBottom_toBottomOf="@+id/tvAnimalDietDetail"
        app:layout_constraintStart_toStartOf="@+id/glFirst"
        app:layout_constraintTop_toTopOf="@+id/tvAnimalDietDetail" />

    <TextView
        android:id="@+id/tvAnimalNameDetail"
        style="@style/Title"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/ivAnimalDetail"
        tools:text="@string/an_error_occured_while_loading_data" />

    <TextView
        android:id="@+id/tvAnimalLifeSpanDetail"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        app:layout_constraintEnd_toStartOf="@+id/glSecond"
        app:layout_constraintStart_toEndOf="@+id/glThird"
        app:layout_constraintTop_toBottomOf="@+id/tvAnimalLocationDetail"
        tools:text="@string/an_error_occured_while_loading_data" />

    <TextView
        android:id="@+id/tvAnimalLocationDetail"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        app:layout_constraintEnd_toStartOf="@+id/glSecond"
        app:layout_constraintStart_toEndOf="@+id/glThird"
        app:layout_constraintTop_toBottomOf="@+id/tvAnimalNameDetail"
        tools:text="@string/an_error_occured_while_loading_data" />

    <TextView
        android:id="@+id/tvAnimalDietDetail"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        app:layout_constraintEnd_toStartOf="@+id/glSecond"
        app:layout_constraintStart_toEndOf="@+id/glThird"
        app:layout_constraintTop_toBottomOf="@+id/tvAnimalLifeSpanDetail"
        tools:text="@string/an_error_occured_while_loading_data" />

</androidx.constraintlayout.widget.ConstraintLayout>